# opendast

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BEGINNERS_GUIDE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  release.yml
examples/: README.md
examples/merge-request-scan/: github-actions.yml  gitlab-ci.yml
examples/on-demand-scan/: github-actions.yml  gitlab-ci.yml
examples/post-deploy-gate/: github-actions.yml  gitlab-ci.yml
examples/release-gate/: github-actions.yml  gitlab-ci.yml
examples/scheduled-scan/: github-actions.yml  gitlab-ci.yml
opendast/: __init__.py  config.py  constants.py  http_client.py  logger.py  playbook.py  prompt.py  scanner.py  shell_tools.py  summary.py  tools.py  types.py
playbooks/: web_scan.md
tests/: test_config.py  test_constants.py  test_http_client.py  test_init.py  test_logger.py  test_main.py  test_playbook.py  test_prompt.py  test_scanner.py  test_shell_tools.py  test_summary.py  test_tools.py  test_types.py
