[project]
name = "opendast"
version = "1.0.0"
description = "AI-driven Dynamic Application Security Testing tool for CI/CD pipelines"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.83.0",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["open_dast"]

[tool.coverage.report]
show_missing = true
fail_under = 80
