[project]
name = "opendast"
version = "1.0.1"
description = "AI-driven Dynamic Application Security Testing tool for CI/CD pipelines"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.83.0,<1",
    "requests>=2.32.5,<3",
]

[tool.setuptools.packages.find]
include = ["opendast*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["opendast"]

[tool.coverage.report]
show_missing = true
fail_under = 80
